// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-hubspot-cloud destination: contact action - all fields 1`] = `
[FetchError: request to https://api.hubapi.com/crm/v3/objects/contacts/fodhudwu@megjif.fr?idProperty=email failed, reason: Nock: No match for request {
  "method": "PATCH",
  "url": "https://api.hubapi.com/crm/v3/objects/contacts/fodhudwu@megjif.fr?idProperty=email",
  "headers": {
    "authorization": [
      "Bearer undefined"
    ],
    "user-agent": [
      "Segment (Actions)"
    ],
    "content-type": [
      "application/json"
    ],
    "accept": [
      "*/*"
    ],
    "content-length": [
      "335"
    ],
    "accept-encoding": [
      "gzip,deflate"
    ],
    "connection": [
      "close"
    ]
  },
  "body": "{\\"properties\\":{\\"company\\":\\"5$BQNVB&l2hAJON0\\",\\"firstname\\":\\"5$BQNVB&l2hAJON0\\",\\"lastname\\":\\"5$BQNVB&l2hAJON0\\",\\"phone\\":\\"5$BQNVB&l2hAJON0\\",\\"address\\":\\"5$BQNVB&l2hAJON0\\",\\"city\\":\\"5$BQNVB&l2hAJON0\\",\\"state\\":\\"5$BQNVB&l2hAJON0\\",\\"country\\":\\"5$BQNVB&l2hAJON0\\",\\"zip\\":\\"5$BQNVB&l2hAJON0\\",\\"lifecyclestage\\":\\"5$bqnvb&l2hajon0\\",\\"testType\\":\\"5$BQNVB&l2hAJON0\\"}}"
}]
`;

exports[`Testing snapshot for actions-hubspot-cloud destination: contact action - required fields 1`] = `
[FetchError: request to https://api.hubapi.com/crm/v3/objects/contacts/fodhudwu@megjif.fr?idProperty=email failed, reason: Nock: No match for request {
  "method": "PATCH",
  "url": "https://api.hubapi.com/crm/v3/objects/contacts/fodhudwu@megjif.fr?idProperty=email",
  "headers": {
    "authorization": [
      "Bearer undefined"
    ],
    "user-agent": [
      "Segment (Actions)"
    ],
    "content-type": [
      "application/json"
    ],
    "accept": [
      "*/*"
    ],
    "content-length": [
      "17"
    ],
    "accept-encoding": [
      "gzip,deflate"
    ],
    "connection": [
      "close"
    ]
  },
  "body": "{\\"properties\\":{}}"
}]
`;

exports[`Testing snapshot for actions-hubspot-cloud destination: createCustomObjectRecord action - all fields 1`] = `[IntegrationError: Custom Object is not in valid format. Please make sure that you are using either a valid format of object’s fullyQualifiedName (eg: p11223344_myobject) or a supported HubSpot defined object (ie: deals, tickets, contacts and companies).]`;

exports[`Testing snapshot for actions-hubspot-cloud destination: createCustomObjectRecord action - required fields 1`] = `[IntegrationError: Custom Object is not in valid format. Please make sure that you are using either a valid format of object’s fullyQualifiedName (eg: p11223344_myobject) or a supported HubSpot defined object (ie: deals, tickets, contacts and companies).]`;

exports[`Testing snapshot for actions-hubspot-cloud destination: sendCustomBehavioralEvent action - all fields 1`] = `
Object {
  "email": "geoli@sekuki.mg",
  "eventName": "NTxWtuPi(z!bOHmgT^*3",
  "objectId": "NTxWtuPi(z!bOHmgT^*3",
  "occurredAt": "2021-02-01T00:00:00.000Z",
  "properties": Object {
    "testType": "NTxWtuPi(z!bOHmgT^*3",
  },
  "utk": "NTxWtuPi(z!bOHmgT^*3",
}
`;

exports[`Testing snapshot for actions-hubspot-cloud destination: sendCustomBehavioralEvent action - required fields 1`] = `
Object {
  "eventName": "NTxWtuPi(z!bOHmgT^*3",
}
`;

exports[`Testing snapshot for testHelper: empty seed 1`] = `
Object {
  "objectType": "p0_Obj0",
  "properties": Object {
    "testProperty": "testValue-0",
  },
}
`;
